@@ -137,7 +137,7 @@
 
 <addon
 	id="plugin.video.dr.dk.live"
-	version="1.1.0"
+	version="1.2.0"
 	name="Danish Live TV"
 	provider-name="twinther [tommy@winther.nu]">
 	<requires>
