@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
 	id="plugin.video.dr.dk.live"
-	version="1.1.0"
+	version="1.2.0"
 	name="Danish Live TV"
 	provider-name="twinther [tommy@winther.nu]">
 	<requires>
